--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 Flask==3.0.3
 flask-cors==4.0.1
 Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.7
 python-dotenv==1.0.1
 firebase-admin==6.5.0
 psycopg2-binary==2.9.9
